GNOME Bugzilla – Bug 648633
gnome-shell notification pop-ups do not emit object:state-changed:showing
Last modified: 2011-08-04 13:29:31 UTC
Created attachment 186610 [details] test script Steps to reproduce: 1. Run the attached script. 2. Cause a notification (e.g. incoming chat message) to pop up in gnome-shell. Expected results: An object:state-changed:showing event would be seen in addition to object:state-changed:visible. Actual results: (See below). object:state-changed:showing is not emitted. object:state-changed:visible(1, 0, 0) source: [panel | ] host_application: [canvas | Stage] has showing: True has visible: True object:state-changed:visible(0, 0, 0) source: [panel | ] host_application: [canvas | Stage] has showing: True has visible: False
Just to not forget that, as we were talking about this via IRC: After a quick check, the problem here is that although cally-actor takes into account ATK_STATE_SHOWING on ref_state_set, I forget to add the equivalent code on the notify_clutter code. So the description can be "CallyActor doesnt notify changes on ATK_STATE_SHOWING", but lets keep the current description, as explain how to reproduce it. BTW, this code has a related commit waiting to be applied, so I will work based on that: http://gitorious.org/clutter-cally/clutter-cally/commit/864034df1654509247adc5cbdfff2567a2fcd107
(In reply to comment #1) > BTW, this code has a related commit waiting to be applied, so I will work based > on that: > > http://gitorious.org/clutter-cally/clutter-cally/commit/864034df1654509247adc5cbdfff2567a2fcd107 This commit was just applied on master.
Created attachment 193238 [details] [review] Proposed patch Please, revise and apply it.
Review of attachment 193238 [details] [review]: The patch seems ok, but the description is not fine. That line should be descriptive by his own, so anyone looking at the log could know more or less the purpose of the commit without looking at bugzilla. As you don't have account, I will modify that line by myself. Take this for the future.