a11y: Notify ATK_STATE_SHOWING state change

https://bugzilla.gnome.org/show_bug.cgi?id=648633